--- a/_includes/navbanner.html
+++ b/_includes/navbanner.html
@@ -26,7 +26,7 @@
 			
 		<!-- Home page -->
 		{% assign home = 'Home' %}
-		{% if site.tHome %}{% assign home = site.tHome %}{% endif %}
+		{% if site.data.text-for.tHome %}{% assign home = site.data.text-for.tHome %}{% endif %}
 		<li>
 			<div class="menu-item">
 				<div class="menu-item-symbol"></div>
@@ -104,7 +104,7 @@
 		{% assign cats = site.pages | where:'layout', 'category-page' | sort:'title' %}
 		{% if cats.size > 0 %}
 			{% assign categories = 'Categories' %}
-			{% if site.tCategories %}{% assign categories = site.tCategories %}{% endif %}
+			{% if site.data.text-for.tCategories %}{% assign categories = site.data.text-for.tCategories %}{% endif %}
 			<li>
 				<input type="checkbox" id="category-checkbox">
 				<label for="category-checkbox">
