--- a/_includes/widgets/recent-posts.html
+++ b/_includes/widgets/recent-posts.html
@@ -1,6 +1,6 @@
 <div>
 	{% assign recent = 'Recent' %}
-	{% if site.tRecent %}{% assign recent = site.tRecent %}{% endif %}
+	{% if site.data.text-for.tRecent %}{% assign recent = site.data.text-for.tRecent %}{% endif %}
 	<h1>{{ recent }}:</h1>
 	{% for post in site.posts %}
 		{% if for.index > site.number-of-recent-posts-in-widget %}{% break %}{% endif %}
