--- a/_includes/widgets/social-media.html
+++ b/_includes/widgets/social-media.html
@@ -1,6 +1,6 @@
 <div>
 	{% assign message = 'Social Media & Resources' %}
-	{% if site.tSocialMediaResources %}{% assign message = site.tSocialMediaResources %}{% endif %}
+	{% if site.data.text-for.tSocialMediaResources %}{% assign message = site.data.text-for.tSocialMediaResources %}{% endif %}
 	<h1>{{ message }}:</h1>
 	{% if site.github_username %}
 		<div>{% include widgets/social-media-res/icon-github.html username=site.github_username %}</div>
