--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
 <!--	{{ content }} -->
 
 	{% for post in site.posts %}
-	{% if forloop.index > site.number_of_posts_on_home_page %} {% break %} {% endif %}
+	{% if forloop.index > site.data.setup.number_of_posts_on_home_page %} {% break %} {% endif %}
 
     <h2><a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a></h2>
     <span class="post-meta">{{ post.date | date: "%F" }}</span>
