--- a/_includes/navbanner.html
+++ b/_includes/navbanner.html
@@ -1,5 +1,6 @@
 <!-- Title of the site is always visible -->
 <div class="navbanner-title">
+	<div class="banner-icon"></div>
 	<p class="site-title-text">{{ site.title }}</p>
 </div>
 
