--- a/_sass/classic-jekyll-theme.scss
+++ b/_sass/classic-jekyll-theme.scss
@@ -165,5 +165,6 @@ $narrow-max-width:						$medium-min-width - 1;
   "classic/syntax-highlighting",
   "classic/post",
   "classic/page",
+  "classic/support",
   "classic/widget-support"
 ;
