--- a/_sass/classic-jekyll-theme.scss
+++ b/_sass/classic-jekyll-theme.scss
@@ -80,7 +80,7 @@ $narrow-icon-voffset:					0px;
 $narrow-icon-hoffset:					0px;
 
 // Setting a height for the banner. This can be helpfull if a background image or icon has to be displayed.
-// Note that for 'auto' the banner hight is determined by the title text.
+// Note that for 'auto' the banner height is determined by the title text.
 $wide-banner-height:					auto; // Set to 'auto' to disable a minimum height
 $medium-banner-height:					auto; // Set to 'auto' to disable a minimum height
 $narrow-banner-height:					auto; // Set to 'auto' to disable a minimum height
