Added custom column layouts to individual pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+{% if page.secondary-column %}{% if page.secondary-column == 'left' %}{% assign secondary-column = 'left' %}{% endif %}{% if page.secondary-column == 'right' %}{% assign secondary-column = 'right' %}{% endif %}{% else %}{% if site.data.setup.secondary-column == 'left' %}{% assign secondary-column = 'left' %}{% endif %}{% if site.data.setup.secondary-column == 'right' %}{% assign secondary-column = 'right' %}{% endif %}{% endif %}
+{% if page.secondary-column-content %}{% assign secondary-column-content = {{ page.secondary-column-content }} %}{% else %}{% assign secondary-column-content = 'secondary-column.html' %}{% endif %}
+{% if page.tertiary-column %}{% if page.tertiary-column == 'present' %}{% assign tertiary-column = 'present' %}{% endif %}{% else %}{% if site.data.setup.tertiary-column == 'present' %}{% assign tertiary-column = 'present' %}{% endif %}{% endif %}
+{% if page.tertiary-column-content %}{% assign tertiary-column-content = page.tertiary-column-content %}{% else %}{% assign tertiary-column-content = 'tertiary-column.html' %}{% endif %}
 <html>
 
 	{% include head.html %}
@@ -9,16 +13,16 @@
 
 		<div class="column-panel">
 
-			{% if site.data.setup.secondary_column == 'left' %}
+			{% if secondary-column == 'left' %}
 			<div class="secondary-column">
 				<div class="secondary-column-content">{% include secondary-column.html %}</div>
-				{% if site.data.setup.tertiary_column == 'present' %}	
+				{% if tertiary-column == 'present' %}	
 					<div class="tertiary-column-content">{% include tertiary-column.html %}</div>
 				{% endif %}
 			</div>
 			<div class="secondary-divider"></div>
 			{% else %}
-				{% if site.data.setup.tertiary_column == 'present' %}
+				{% if tertiary-column == 'present' %}
 				<div class="tertiary-column">
 					<div class="tertiary-column-content">{% include tertiary-column.html %}</div>
 				</div>
@@ -32,16 +36,16 @@
 			</div>
 			
 			
-			{% if site.data.setup.secondary_column == 'right' %}
+			{% if secondary-column == 'right' %}
 			<div class="secondary-divider"></div>			
 			<div class="secondary-column">
 				<div class="secondary-column-content">{% include secondary-column.html %}</div>
-				{% if site.data.setup.tertiary_column == 'present' %}	
+				{% if tertiary-column == 'present' %}	
 					<div class="tertiary-column-content">{% include tertiary-column.html %}</div>
 				{% endif %}
 			</div>
 			{% else %}
-			   {% if site.data.setup.tertiary_column == 'present' %}
+			   {% if tertiary-column == 'present' %}
 				<div class="tertiary-divider"></div>
 				<div class="tertiary-column">
 					<div class="tertiary-column-content">{% include tertiary-column.html %}</div>
