--- a/_includes/widgets/recent-posts.html
+++ b/_includes/widgets/recent-posts.html
@@ -11,8 +11,7 @@ Configure the text for the header message in "_data/text-for.yml" for the item `
 	{% assign recent = 'Recent' %}
 	{% if site.data.text-for.tRecent %}{% assign recent = site.data.text-for.tRecent %}{% endif %}
 	<h1>{{ recent }}:</h1>
-	{% for post in site.posts %}
-		{% if for.index > site.data.setup.number-of-recent-posts-in-widget %}{% break %}{% endif %}
+	{% for post in site.posts limit: site.data.setup.number-of-recent-posts-in-widget %}
 		<p><a href="{{ post.url }}">{% if post.date %}{{ post.date | date: "%F" }}{% endif %} {{ post.title }}</a></p>
 	{% endfor %}
 </div>
